# support_agent

./: .env.example  .gitignore  README.md  agent.py  db.py  db_pool.py  docker_compose.yml  graph.py  graph_builder.py  main.py  prompts.py  pyproject.toml  schemas.py  sitecustomize.py
agents/: qa.py
api/: app.py  dependency.py  schemas.py  uvicorn_loop.py
api/routers/: telegram.py  websocket.py  whatsapp.py
api/services/: telegram.py  websocket.py
data/: db_pool.py  load_data.py
frontend/: index.html  package-lock.json  package.json
tests/: scenario_utils.py  test_scenario_product_category.py  test_scenario_product_info.py  test_scenario_product_reviews.py  test_scenario_products_in_category.py
tools/: qa.py  vectorize_tools.py
utils/: llm_provider.py
